fixed z-indexing error.

--- a/space-journal/src/app/globals.css
+++ b/space-journal/src/app/globals.css
@@ -219,7 +219,7 @@
         }
 
 #journal{
-    z-index: 999;
+    z-index: 700;
 }
 
 @keyframes shake {
